# os-simulator

./: .gitignore  CHALLENGES.md  CMakeLists.txt  README.md  config.yaml  main.cpp
docs/: # Advanced Mechanics Specification_ OS Simulator.md  # Backend Architecture & Kernel Specification.md  # Frontend Architecture & TUI Specification.md  # Project Specification_ OS Memory & Concurrency Simulator.md  02 — TRD (Technical Requirements Document).md  03 — APP FLOW (Navigation & User Journey Map).md  05 — BACKEND SCHEMA.md  06 — IMPLEMENTATION PLAN.md  OS_Simulator_Problems_and_Solutions.md  _01 — PRD (Product Requirements Document.md  _04 — UI_UX DESIGN BRIEF.md  _Master Architecture Document.md
include/core/: concurrency_manager.h  cpu_scheduler.h  process.h  thrashing_detector.h
include/memory/: clock_strategy.h  fifo_strategy.h  lru_strategy.h  mmu.h  opt_strategy.h  page_replacer.h
include/ui/: dashboard.h  lock_monitor.h  memory_view.h  telemetry_view.h
include/utils/: config_parser.h  telemetry.h
src/core/: concurrency_manager.cpp  cpu_scheduler.cpp  process.cpp  thrashing_detector.cpp
src/memory/: clock_strategy.cpp  fifo_strategy.cpp  lru_strategy.cpp  mmu.cpp  opt_strategy.cpp
src/ui/: dashboard.cpp  lock_monitor.cpp  memory_view.cpp  telemetry_view.cpp
src/utils/: config_parser.cpp  telemetry.cpp
tests/: priority_inheritance_test.cpp  stress_test.cpp  thrashing_stress_test.cpp
